Keep the field bridge compatible with Android 8+